Click NEWS

Version 1.0.7

* User-level driver

** User-level Click can optionally dump the output of element read handlers
   into a directory (directory path specified using -d option) or stdout on a
   regular basis (duration between each dump specified using -u option).


Version 1.0.6   6.May.2000

* Kernel and user-level drivers

** Fixed kernel Packet::expensive_push. Patch by Richard Mortier
   <rmm1002@cam.ac.uk>.

** Kernel driver: Added /proc/click/version.

* Elements

** Replace UDPEncap with UDPIPEncap. New element adds both IP and UDP
   headers, and fixes several bugs in UDPEncap. Thanks to Richard Mortier
   <Richard.Mortier@cl.cam.ac.uk>.

* Miscellaneous

** Fixed findelements.sh: Ethernet switch elements were not being included.


Version 1.0.5   1.May.2000

* Kernel and user-level drivers

** You can hot-swap install Click configurations in the Linux kernel
   module. In a hot-swap install, packets stored in the old configuration
   will not be lost. (The new configuration's Queues must have the same
   names as the old configuration's Queues.) See the click.o(8) man page
   (under /proc/click/hotconfig) and the click-install(1) man page for more
   information.

** Bug fixes: User-level Click correctly handles timed elements like
   TimedSource and TimedSink and scheduled elements like RatedSource; and
   the kernel module correctly handles timed elements. Reported by Saurabh
   Sandhir <sandhir@purdue.edu>.

** More changes to ToDevice to enable Linux and Click to send packets
   independently and not cause race conditions. This includes a new linux
   kernel patch (etc/linux-2.2.14-patch) and changes to ToDevice. Click
   runs in a separate kernel thread, so we synchronize ToDevice send
   operations in kernel with a bit lock (dev->tbusy).

** Every Linux kernel module now runs as a separate kernel thread, even if
   HAVE_POLLING is not defined.

** The click user-level driver can now automatically compile any required