@@ -36,8 +36,8 @@ click-align \- adds required Align elements to a Click router configuration
 '
 .SH SYNOPSIS
 .B click-align
-.I \%[options]
-.I \%[router\-file]
+.RI \%[ options ]
+.RI \%[ router\-file ]
 '
 .SH DESCRIPTION
 The
