@@ -36,7 +36,7 @@ click-combine \- combines two or more Click routers into one configuration
 '
 .SH SYNOPSIS
 .B click-combine
-.I \%[options]
+.RI \%[ options ]
 \%\fIname\fR:\fIfile\fR ... \\
 .br
 \%        \fIname1\fR.\fIelement1\fR=\fIname2\fR.\fIelement2\fR ...
