@@ -36,8 +36,8 @@ click-devirtualize \- removes virtual function calls from a Click router configu
 '
 .SH SYNOPSIS
 .B click-devirtualize
-.I \%[options]
-.I \%[router\-file]
+.RI \%[ options ]
+.RI \%[ router\-file ]
 '
 .SH DESCRIPTION
 The
