@@ -36,8 +36,8 @@ click-fastclassifier \- specializes Classifier code in a Click router configurat
 '
 .SH SYNOPSIS
 .B click-fastclassifier
-.I \%[options]
-.I \%[router\-file]
+.RI \%[ options ]
+.RI \%[ router\-file ]
 '
 .SH DESCRIPTION
 The
