@@ -37,8 +37,8 @@ click-install \- installs a router configuration into the Click kernel module
 '
 .SH SYNOPSIS
 .B click-install
-.I \%[options]
-.I \%[router\-file]
+.RI \%[ options ]
+.RI \%[ router\-file ]
 '
 .SH DESCRIPTION
 .B Click-install
