@@ -36,9 +36,8 @@ click-xform \- pattern-based Click router configuration optimizer
 '
 .SH SYNOPSIS
 .B click-xform
-.I \%[options]
-.I \%[router\-file]
-.I \%[pattern\-files]
+.RI \%[ options ]
+.RI \%[ router\-file " [" pattern\-files ...]]
 '
 .SH DESCRIPTION
 The
