@@ -36,8 +36,8 @@ click \- runs router configurations at user level
 '
 .SH SYNOPSIS
 .B click
-.I \%[options]
-.I \%[router\-file]
+.RI \%[ options ]
+.RI \%[ router\-file ]
 '
 .SH DESCRIPTION
 The Click modular router can be compiled as a user-level program. It reads
