@@ -173,13 +173,18 @@ prepared_router()
   RouterT *r = new RouterT;
   r->get_type_index("Align", new AlignAlignClass);
   r->get_type_index("Strip", new StripAlignClass);
-  r->get_type_index("FromDevice", new AlignClass(new GeneratorAligner(Alignment(4, 2))));
   r->get_type_index("Classifier", new AlignClass(new ClassifierAligner));
-  Aligner *a = new WantAligner(Alignment(4, 0));
-  r->get_type_index("CheckIPHeader", new AlignClass(a));
-  r->get_type_index("IPEncap", new AlignClass(a));
+  Aligner *a = new GeneratorAligner(Alignment(4, 2));
+  r->get_type_index("FromDevice", new AlignClass(a));
+  r->get_type_index("PollDevice", new AlignClass(a));
+  r->get_type_index("FromLinux", new AlignClass(a));
   a = new WantAligner(Alignment(4, 2));
   r->get_type_index("ToLinux", new AlignClass(a));
+  a = new WantAligner(Alignment(4, 0));
+  r->get_type_index("CheckIPHeader", new AlignClass(a));
+  r->get_type_index("CheckIPHeader2", new AlignClass(a));
+  r->get_type_index("MarkIPHeader", new AlignClass(a));
+  r->get_type_index("IPEncap", new AlignClass(a));
   a = new WantAligner(Alignment(2, 0));
   r->get_type_index("ARPResponder", new AlignClass(a));
   r->get_type_index("ARPQuerier", new AlignClass(a));
